--- a/Project/Client/Views/Product/Product.cshtml
+++ b/Project/Client/Views/Product/Product.cshtml
@@ -5,13 +5,11 @@
 
 <div class="container-fluid mt-5" style="min-height:1100px;">
     <section class="modern-heading ms-3">
-        <h1 style="font-family: 'Poppins', sans-serif; text-transform: uppercase; text-align: center; margin: 0;">
-            Other Product
-        </h1>
+        <h1 class="responsive-heading">Other Product</h1>
     </section>
 
     <div class="row mt-2">
-        <div class="col-md-3">
+        <div class="col-3 col-sm-3 col-md-3">
             <!-- Tăng độ rộng của cột chứa -->
             <div class="filter-container m-3 p-3 shadow-sm rounded">
                 <h4 class="mt-3 text-center">Filters</h4>
@@ -98,7 +96,7 @@
                 </form>
             </div>
         </div>
-        <div class="col-md-9 mt-2">
+        <div class="col-9 col-sm-9 col-md-9 mt-2">
             <div class="d-flex align-items-center justify-content-center sort-container">
                 <!-- Sort -->
                 <form class="col-md-5 d-inline-flex align-items-center ms-2" asp-action="SortProducts" asp-controller="Product" method="post">
@@ -208,13 +206,13 @@
 
             
             
-            <div class=" me-1">
+            <div >
                 <div class="d-flex flex-wrap">
                     @if (Model.Product != null)
                     {
                         foreach (var product in Model.Product)
                         {
-                            <div class="col-12 col-sm-12 col-md-3 card_other mt-4" style="width: 14rem; height:300px;">
+                            <div class="col-12 col-sm-12 col-md-4 card_other mt-4">
                                 @if (product.Links != null)
                                 {
                                     string firstImageUrl = null; // Biến để lưu URL hình ảnh đầu tiên
