--- a/Project/Client/Views/Admin/CreateProduct.cshtml
+++ b/Project/Client/Views/Admin/CreateProduct.cshtml
@@ -85,7 +85,7 @@
     </div>
 
     <!-- Status -->
-    <div class="form-group">
+    <div class="form-group mt-2">
         <label asp-for="@Model.Status" class="form-label"></label>
         <select asp-for="@Model.Status" class="form-select" aria-label="Status" disabled>
             <option value="0" selected>Inactive</option>
@@ -98,7 +98,7 @@
     </div>
 
     <!-- ImageFiles (Upload multiple images) -->
-    <div class="form-group">
+    <div class="form-group mt-2">
         <label class="control-label" asp-for="@Model.imageFiles" >Upload Images</label>
         <input type="file" name="imageFiles" multiple class="form-control" asp-for="@Model.imageFiles" accept="image/*" />
         <span asp-validation-for="@Model.imageFiles" class="text-danger"></span>
@@ -112,10 +112,17 @@
     </div> *@
 
     <!-- Game File (Upload game file) -->
-    <div class="form-group">
+    <div class="form-group mt-2">
         <label class="control-label" asp-for="@Model.gameFile">Upload Game File</label>
         <input type="file" name="gameFile" multiple class="form-control" asp-for="@Model.gameFile" accept=".rar, .zip" />
         <span asp-validation-for="@Model.gameFile" class="text-danger"></span>
+    </div>
+
+    <!-- WinrarPassword -->
+    <div class="form-group mt-2">
+        <label class="control-label">Rar Password - Password for game file</label>
+        <input asp-for="@Model.winrarPassword" class="form-control" type="text" placeholder="Password of file game...."/>
+        <span asp-validation-for="@Model.winrarPassword" class="text-danger"></span>
     </div>
 
     <!-- Submit Button -->
