--- a/Project/Client/Views/Admin/DeleteProduct.cshtml
+++ b/Project/Client/Views/Admin/DeleteProduct.cshtml
@@ -243,7 +243,7 @@
     </div>
 
     <div style="margin-top:2vw;">
-            <input type="submit" value="Delete" class="btn btn-danger" />
+            @* <input type="submit" value="Delete" class="btn btn-danger" /> *@
             <a asp-action="ProductsManager" class="btn btn-secondary">Back to List</a>
     </div>
 
@@ -310,7 +310,7 @@
 
 
     <!-- Submit button -->
-    <button type="submit" class="btn btn-warning">
-        <i class="bi bi-trash"></i> Delete Mềm
+    <button type="submit" class="btn btn-danger">
+        <i class="bi bi-trash"></i> Delete
     </button>
 </form>
